# test-risc0

counting-sort/: .env_vars  array_generator.py  deploy_local.sh  deployment-guide.md  test.sh  test_CountingSort.csv
counting-sort/apps/: Cargo.toml
counting-sort/cache/: solidity-files-cache.json
counting-sort/contracts/: CountingSort.sol  ICountingSort.sol  ImageID.sol
counting-sort/script/: Deploy.s.sol  DeployVerifier.s.sol  config.toml
counting-sort/tests/: CountingSort.t.sol  Elf.sol
heap-sort/: .env_vars  deploy_local.sh  deployment-guide.md  risultati_heapSort.csv  test.sh
heap-sort/cache/: solidity-files-cache.json  test-failures
heap-sort/contracts/: HeapSort.sol  IHeapSort.sol  ImageID.sol  README.md
heap-sort/methods/guest/: Cargo.toml
heap-sort/script/: Deploy.s.sol
heap-sort/tests/: Elf.sol  HeapSort.t.sol
insertion-sort/: .env_vars  README.md  array_generator.py  data_analisys.sh  deploy_local.sh  deployment-guide.md  insertion_sort_data.csv  risultati_insertionSort.csv  test.sh  test_insertionSort.csv
insertion-sort/cache/: solidity-files-cache.json
insertion-sort/contracts/: IInsertionSort.sol  ImageID.sol  InsertionSort.sol
insertion-sort/methods/guest/: Cargo.toml
insertion-sort/script/: Deploy.s.sol
insertion-sort/tests/: Elf.sol  InsertionSort.t.sol
merge-sort/: .env_vars  deploy_local.sh  deployment-guide.md  risultati_MergeSort.csv  test.sh
merge-sort/cache/: solidity-files-cache.json
merge-sort/tests/: Elf.sol  (+1 more)
sudoku/: deploy_sepolia.sh  deployment-guide.md  insertion_sort
sudoku/methods/guest/: Cargo.toml
(+67 files in other folders)
