[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "heap_sort"
path = "src/bin/heap_sort.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "1.0", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.0" }
risc0-zkvm = { version = "2.0.2", default-features = false, features = ['std'] }

[profile.release]
lto = "thin"
